--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,22 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Lorem ipsum dolor sit amet.</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
+    <header>
+      <div class="container">
+        <!-- page first -->
+        <div class="first-page">
+          <p class="first-page-hello">Вітаю, Іване!</p>
+          <p class="first-page-title">Як вже стукнув 21 рік то тисни кнопку</p>
+          <div class="first-page-container-btn">
+            <button class="first-page-btn" type="button"><span>></span></button>
+          </div>
+        </div>
+        <!-- page second -->
+        <div class="second-page">
+          <p></p>
+        </div>
+      </div>
+    </header>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
