--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,22 @@
           </div>
         </div>
         <!-- page second -->
-        <div class="second-page">
-          <p></p>
+        <div class="second-page is-opacity">
+          <p class="second-page-text">
+            Мені іноді здається що ми вже знайомі цілу вічність, мабуть воно так
+            і є. І я спочатку хотів просто привітати тебе але подумав що цього
+            замало, подумав що хочу не просто привітати, а подякувати за увесь
+            час нашої дружби. Останні кілька років ми бачимося дуже рідко, і це
+            мабуть норм, просто наслідки дорослого життя. Головне щоб при
+            зустрічі було про що поговорити. Так що дякую вам пан Іван за наше
+            веселе підліткове буття. Дякую за твій оптимізм і гумор, дякую за
+            підтримку.
+          </p>
+          <div class="second-page-container-btn">
+            <button class="second-page-btn" type="button">
+              <span>></span>
+            </button>
+          </div>
         </div>
       </div>
     </header>
