--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,20 @@
             </button>
           </div>
         </div>
+        <!-- page three -->
+        <div class="three-page is-opacity">
+          <p class="three-page-text">
+            Ну і звісно з ДНЕМ НАРОДЖЕННЯ! Звичайно ж я тобі бажаю усіх земних
+            благ та щастя. Бажаю тобі сили і здоровʼя, сміху і любові. Бажаю
+            бажання прокидатися з ранку і посмішок перед сном. Бажаю щоб кожен
+            твій день був найкращім і цілей до яких ти будеш іти крок за кроком.
+          </p>
+          <div class="three-page-container-btn">
+            <button class="three-page-btn" type="button">
+              <span>></span>
+            </button>
+          </div>
+        </div>
       </div>
     </header>
     <script type="module" src="./main.js"></script>
