--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,17 @@
             </button>
           </div>
         </div>
+        <!-- page four -->
+        <div class="four-page is-opacity">
+          <p class="four-page-text">На фото: LEX & LilLazy</p>
+          <div class="four-page-container-img">
+            <img class="four-page-img" src="./img/ivan-foto.jpg" alt="" />
+          </div>
+
+          <p class="four-page-text">
+            Залишайся собою, але і не забувай зростати ❤️
+          </p>
+        </div>
       </div>
     </header>
     <script type="module" src="./main.js"></script>
